--- a/hkube/templates/site-deployment.yaml
+++ b/hkube/templates/site-deployment.yaml
@@ -18,7 +18,9 @@ spec:
       containers:
       - name:  hkube-site
         image:  "{{ .Values.global.registry }}{{ .Values.site.image.repository }}:{{ .Values.site.image.tag }}"
-
+        env :
+          - name: BASE_URL
+            value: "/hkube/site"
         resources:
           limits:
             cpu: 200m
