--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -306,13 +306,14 @@ nodeSelector: {}
 site:
   env: {}
   image:
-    repository: hkube/hkube-site
-    tag: v1.0.1
+    repository: hkube/site
+    tag: v1.0.15
+
   ingress:
     enabled: true
     path: hkube/site
   service:
-    port: 80
+    port: 8444
     type: ClusterIP
   resources:
     limits:
