--- a/hkube/templates/site-deployment.yaml
+++ b/hkube/templates/site-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         image:  "{{ .Values.global.registry }}{{ .Values.site.image.repository }}:{{ .Values.site.image.tag }}"
         env :
           - name: BASE_URL
-            value: "/hkube/site"
+            value: "{{ .Values.site.base_url }}"
         resources:
           limits:
             cpu: 200m
