--- a/hkube/templates/simulator-deployment.yaml
+++ b/hkube/templates/simulator-deployment.yaml
@@ -64,6 +64,11 @@ spec:
                 configMapKeyRef:
                   name: simulator-configmap
                   key: KIBANA_URL
+            - name: GRAFANA_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: simulator-configmap
+                  key: GRAFANA_URL
             - name: DATA_SOURCE_IS_ENABLE
               valueFrom:
                 configMapKeyRef:
