--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -397,6 +397,7 @@ api_server: # +doc-gen:ignore
     maxBodySize: 500mb
     rate_limit_ms: 1000
     rate_limit_max: 5
+    elastic_structured_prefix: ""
   image:
     repository: hkube/api-server
     tag: v2.5.26
