--- a/hkube/templates/site-ingress.yaml
+++ b/hkube/templates/site-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^(/hkube/site/learn)$ $1/ redirect;
+      rewrite   ^(?!.*(?:\.css|\/|\.js|\.svg|\.gif|\.png)$)(.*) $1/ redirect;
   labels:
     app: hkube-site
     app.kubernetes.io/managed-by: Helm
