--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -440,6 +440,7 @@ datasources_service: # +doc-gen:ignore
     base_url_path: /hkube/datasources-service
     metric_port: "3001"
     port: "3005"
+    maxBodySize: 2500mb
   image:
     repository: hkube/datasources-service
     tag: v2.6.0
