--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -440,7 +440,7 @@ datasources_service: # +doc-gen:ignore
     base_url_path: /hkube/datasources-service
     metric_port: "3001"
     port: "3005"
-    maxBodySize: 2500mb
+    maxBodySize: 2500m
   image:
     repository: hkube/datasources-service
     tag: v2.6.0
