add new key datasources service

--- a/hkube/templates/simulator-deployment.yaml
+++ b/hkube/templates/simulator-deployment.yaml
@@ -48,7 +48,11 @@ spec:
                 configMapKeyRef:
                   name: simulator-configmap
                   key: API_SERVER_BACKEND_PATH
-   
+            - name: API_SERVER_BACKEND_DATASOURCES_SERVICE_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: simulator-configmap
+                  key: API_SERVER_BACKEND_DATASOURCES_SERVICE_PATH   
             - name: API_SERVER_BACKEND_USE_LOCATION
               valueFrom:
                 configMapKeyRef:
