--- a/hkube/templates/configmaps/simulator-cm.yaml
+++ b/hkube/templates/configmaps/simulator-cm.yaml
@@ -5,7 +5,7 @@ metadata:
   name: simulator-configmap
 data:
   API_SERVER_BACKEND_PATH: {{ printf "%s%s" .Values.global.ingress.prefix .Values.simulator.env.api_server_backend_path | quote }} 
-
+  API_SERVER_BACKEND_DATASOURCES_SERVICE_PATH: {{ printf "%s%s" .Values.global.ingress.prefix .Values.simulator.env.api_server_backend_datasources_service_path | quote }} 
   API_SERVER_BACKEND_USE_LOCATION: {{ .Values.simulator.env.api_server_backend_use_location | quote }}
   API_SERVER_BACKEND_HOST: {{ .Values.simulator.env.api_server_backend_host | quote }}
   API_SERVER_BACKEND_PORT: {{ .Values.simulator.env.api_server_backend_port | quote }}
