--- a/hkube/templates/site-deployment.yaml
+++ b/hkube/templates/site-deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app:  hkube-site
     spec:
+{{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
+      imagePullSecrets:
+        - name: {{ .Values.global.image_pull_secret.name }}
+{{- end }}  
       containers:
       - name:  hkube-site
         image:  "{{ .Values.global.registry }}{{ .Values.site.image.repository }}:{{ .Values.site.image.tag }}"
