--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -58,6 +58,7 @@ global:
     prefix: ""
     # set to false if using nginx-ingress-controller prior to 0.21
     use_regex: true
+    use_routes: false
     requireTls: false
     maxBodySize: 500m
     class: nginx
