--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -591,7 +591,7 @@ pipeline_driver: # +doc-gen:ignore
     storageResultsThreshold: "100Ki"
   image:
     repository: hkube/pipeline-driver
-    tag: v2.7.4
+    tag: v2.7.4-req_res_metrics_for_new_dashboard-7571555322
   service:
     type: ClusterIP
 pipeline_driver_queue: # +doc-gen:ignore
