--- a/hkube/templates/api-gateway-ingress.yaml
+++ b/hkube/templates/api-gateway-ingress.yaml
@@ -5,15 +5,24 @@
 {{- $servicePortGc := .Values.gc_service.env.rest_port | int -}}
 {{- $servicePipelineDriverQueuePort := .Values.pipeline_driver_queue.env.rest_port | int -}}
 {{- $servicePortDatasources := .Values.datasources_service.env.port | int -}}
+{{- $ingressClass := .Values.global.ingress.class | quote -}}
+# {{- if $ingressClass eq "nginx" -}}
+# {{-$ingressIo := nginx.ingress.kubernetes.io-}}
 apiVersion:  {{ template "ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   name: api-gateway
   annotations:
+{{-if $ingressClass eq "nginx"}}
     nginx.ingress.kubernetes.io/rewrite-target: /$1$2
     nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
-    kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
+{{- else if $ingressClass eq "haproxy"}}
+    haproxy.router.openshift.io/rewrite-target: /$1$2
+    haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
+    haproxy.router.openshift.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
+{{- end}}
+    kubernetes.io/ingress.class: {{ $ingressClass }}
 {{- if .Values.global.ingress.hostname }}
     kubernetes.io/tls-acme: "true"
 {{- end }}    
