--- a/hkube/templates/api-server-ingress.yaml
+++ b/hkube/templates/api-server-ingress.yaml
@@ -7,6 +7,7 @@ kind: Ingress
 metadata:
   name: api-server
   annotations:
+{{- if eq .Values.global.ingress.class "nginx"}}
 {{- if .Values.global.ingress.use_regex }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 {{- else }}
@@ -14,10 +15,19 @@ metadata:
 {{- end }}
     nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
+{{- else if eq .Values.global.ingress.class "haproxy"}}
+{{- if .Values.global.ingress.use_regex }}
+    haproxy.router.openshift.io/rewrite-target: /$2
+{{- else }}
+    haproxy.router.openshift.io/rewrite-target: /
+{{- end }}
+    haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
+    haproxy.router.openshift.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
+{{- end}}
     kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
 {{- if .Values.global.ingress.hostname }}
     kubernetes.io/tls-acme: "true"
-{{- end }}    
+{{- end }}  
   labels:
     app: api-server
     release: {{ .Release.Name }}
