adding haproxy option in datasources-service ingress

--- a/hkube/templates/datasources-service-ingress.yaml
+++ b/hkube/templates/datasources-service-ingress.yaml
@@ -8,6 +8,8 @@ metadata:
   name: datasources-service
   annotations:
     kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
+
+{{- if eq .Values.global.ingress.class "nginx"}}
 {{- if .Values.global.ingress.use_regex }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 {{- else }}
@@ -15,6 +17,15 @@ metadata:
 {{- end }}
     nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.datasources_service.env.maxBodySize | quote }}
+{{- else if eq .Values.global.ingress.class "haproxy"}}
+{{- if .Values.global.ingress.use_regex }}
+    haproxy.router.openshift.io/rewrite-target: /$2
+{{- else }}
+    haproxy.router.openshift.io/rewrite-target: /
+{{- end }}
+    haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
+    haproxy.router.openshift.io/proxy-body-size: {{ .Values.datasources_service.env.maxBodySize | quote }}
+{{- end}}
 {{- if .Values.global.ingress.hostname }}
     kubernetes.io/tls-acme: "true"
 {{- end }}    
