adding haproxy option to artifacts registery ingress

--- a/hkube/templates/artifacts-registry-ingress.yaml
+++ b/hkube/templates/artifacts-registry-ingress.yaml
@@ -7,8 +7,13 @@ kind: Ingress
 metadata:
   name: artifacts-registry
   annotations:
+{{- if eq .Values.global.ingress.class "nginx"}}
     nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
+{{- else if eq .Values.global.ingress.class "haproxy"}}
+    haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
+    haproxy.router.openshift.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
+{{- end }}
     kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
 {{- if .Values.global.ingress.hostname }}
     kubernetes.io/tls-acme: "true"
