--- a/hkube/templates/api-server-role.yaml
+++ b/hkube/templates/api-server-role.yaml
@@ -19,7 +19,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["pods","pods/log"]
-  verbs: ["get", "list", "watch"]
+  verbs: ["get", "list", "watch", "delete"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
