--- a/hkube/templates/api-server-role.yaml
+++ b/hkube/templates/api-server-role.yaml
@@ -20,6 +20,9 @@ rules:
 - apiGroups: [""]
   resources: ["pods","pods/log"]
   verbs: ["get", "list", "watch", "delete", "deletecollection"]
+- apiGroups: ["batch"]
+  resources: ["jobs"]
+  verbs: [ "delete", "deletecollection", "get", "list", "watch"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
