Add  cpu_ratio_pressure and memory_ratio_pressure

--- a/hkube/templates/configmaps/task-executor-cm.yaml
+++ b/hkube/templates/configmaps/task-executor-cm.yaml
@@ -27,5 +27,7 @@ data:
   HAS_NODE_LIST: {{ .Values.task_executor.env.has_node_list | quote }}
   USE_RESOURCE_LIMITS: {{ .Values.task_executor.env.use_resource_limits | quote}}
   PODS_OUTPUT_LOG_FOLDER: {{ .Values.task_executor.env.pods_output_log_folder | quote}}
+  CPU_RATIO_PRESSURE: {{ .Values.task_executor.env.cpu_ratio_pressure | quote}}
+  MEMORY_RATIO_PRESSURE: {{ .Values.task_executor.env.memory_ratio_pressure | quote}}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
   
