--- a/hkube/templates/api-server-ingress.yaml
+++ b/hkube/templates/api-server-ingress.yaml
@@ -1,4 +1,5 @@
-{{- if eq .Values.global.ingress.class "haproxy"}}
+{{/* -------------------- nginx configuration - Ingress -------------------- */}}
+{{- if eq .Values.global.ingress.class "nginx" -}}
 {{- $ingressPath := .Values.api_server.ingress.path -}}
 {{- $fullName := "api-server" -}}
 {{- $servicePort := .Values.api_server.env.port | int -}}
@@ -7,7 +8,6 @@ kind: Ingress
 metadata:
   name: api-server
   annotations:
-{{- if eq .Values.global.ingress.class "nginx"}}
 {{- if .Values.global.ingress.use_regex }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 {{- else }}
@@ -15,15 +15,6 @@ metadata:
 {{- end }}
     nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
-{{- else if eq .Values.global.ingress.class "haproxy"}}
-{{- if .Values.global.ingress.use_regex }}
-    haproxy.router.openshift.io/rewrite-target: /$2
-{{- else }}
-    haproxy.router.openshift.io/rewrite-target: /
-{{- end }}
-    haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
-    haproxy.router.openshift.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
-{{- end}}
     kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
 {{- if .Values.global.ingress.hostname }}
     kubernetes.io/tls-acme: "true"
@@ -50,11 +41,49 @@ spec:
         - path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/
 {{- end }}
           backend: {{- include "ingress.backend" (dict "serviceName" $fullName "servicePort" $servicePort "context" $) | nindent 12 }}
-          {{- if eq .Values.global.ingress.class "haproxy"}}   
-          pathType: Prefix
-          {{- else if eq "true" (include "ingress.supportsPathType" .) }}
+          {{- if eq "true" (include "ingress.supportsPathType" .) }}
           pathType: ImplementationSpecific
           {{- end }}
+{{- if .Values.global.ingress.hostname }}
+      host: {{ .Values.global.ingress.hostname }}
+{{- end }}
+
+{{/* -------------------- haproxy configuration - Ingress -------------------- */}}
+{{- else if eq .Values.global.ingress.class "haproxy" -}}
+{{- $ingressPath := .Values.api_server.ingress.path -}}
+{{- $fullName := "api-server" -}}
+{{- $servicePort := .Values.api_server.env.port | int -}}
+apiVersion:  {{ template "ingress.apiVersion" . }}
+kind: Ingress
+metadata:
+  name: api-server
+  annotations:
+    haproxy.router.openshift.io/rewrite-target: /
+    haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
+    haproxy.router.openshift.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
+    kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
+{{- if .Values.global.ingress.hostname }}
+    kubernetes.io/tls-acme: "true"
+{{- end }}  
+  labels:
+    app: api-server
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    group: {{ .Values.labels.group.value }}
+    core: "true"
+spec:
+{{- if .Values.global.ingress.hostname }}
+  tls:
+  - hosts:
+    - {{ .Values.global.ingress.hostname }}
+    secretName: {{ $fullName }}-tls-secret
+{{- end }}
+  rules:
+    - http:
+        paths:
+        - path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/
+          backend: {{- include "ingress.backend" (dict "serviceName" $fullName "servicePort" $servicePort "context" $) | nindent 12 }}
+          pathType: Prefix
 {{- if .Values.global.ingress.hostname }}
       host: {{ .Values.global.ingress.hostname }}
 {{- end }}
