--- a/hkube/templates/api-gateway-ingress.yaml
+++ b/hkube/templates/api-gateway-ingress.yaml
@@ -71,7 +71,7 @@ kind: Ingress
 metadata:
   name: api-gateway
   annotations:
-    haproxy.router.openshift.io/rewrite-target: /$1$2
+    haproxy.router.openshift.io/rewrite-target: /
     haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     haproxy.router.openshift.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
 {{- if .Values.global.ingress.hostname }}
