dashboard - labels - updated app to hkube and removed other labels

--- a/hkube/templates/simulator-ingress.yaml
+++ b/hkube/templates/simulator-ingress.yaml
@@ -86,11 +86,7 @@ metadata:
     kubernetes.io/tls-acme: "true"
 {{- end }}
   labels:
-    app: simulator
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-    group: {{ .Values.labels.group.value }}
-    core: "true"
+    app: hkube
 spec:
 {{- if .Values.global.ingress.hostname }}
   tls:
