--- a/hkube/templates/modify-resource_ingress-nginx.yaml
+++ b/hkube/templates/modify-resource_ingress-nginx.yaml
@@ -23,3 +23,30 @@ spec:
               kubectl patch configmap ingress-nginx-controller -n ingress-nginx --patch '{"data": {"allow-snippet-annotations": "true"}}'
       restartPolicy: Never
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: modify-job-sa
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: configmap-clusterrolebinding
+subjects:
+- kind: ServiceAccount
+  name: modify-job-sa
+  namespace: default
+roleRef:
+  kind: ClusterRole
+  name: configmap-clusterrole
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: configmap-clusterrole
+rules:
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["get", "patch"]
