Run only if isMinikube is true.

--- a/hkube/templates/modify-resource_ingress-nginx.yaml
+++ b/hkube/templates/modify-resource_ingress-nginx.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.isMinikube }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -44,4 +45,4 @@ rules:
 - apiGroups: [""]
   resources: ["configmaps"]
   verbs: ["get", "patch"]
-  
+{{- end }}
