--- a/hkube/templates/artifacts-registry-ingress.yaml
+++ b/hkube/templates/artifacts-registry-ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 {{- if eq .Values.global.ingress.class "nginx"}}
     nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
-    kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
+    ingressClassName: {{ .Values.global.ingress.class | quote }}
 {{- else if eq .Values.global.ingress.class "haproxy"}}
     haproxy.router.openshift.io/ssl-redirect: {{ .Values.global.ingress.requireTls | quote }}
     haproxy.router.openshift.io/proxy-body-size: {{ .Values.global.ingress.maxBodySize | quote }}
