--- a/hkube/templates/gc-service-ingress.yaml
+++ b/hkube/templates/gc-service-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
   name: gc-service
   annotations:
 {{- if eq .Values.global.ingress.class "nginx"}}
-    ingressClassName: {{ .Values.global.ingress.class | quote }}
+    kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
 {{- if .Values.global.ingress.use_regex }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 {{- else }}
