--- a/hkube/templates/site-ingress.yaml
+++ b/hkube/templates/site-ingress.yaml
@@ -6,7 +6,7 @@ kind: Ingress
 metadata:
   annotations:
 {{- if eq .Values.global.ingress.class "nginx"}}
-    ingressClassName: {{ .Values.global.ingress.class | quote }}
+    kubernetes.io/ingress.class: {{ .Values.global.ingress.class | quote }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite   ^(?!.*(?:\.css|\/|\.js|\.svg|\.gif|\.png)$)(.*) $1/ redirect;
